# sn-caption

./: .gitignore  .gitmodules  fun-facts.json
Benchmarks/TemporallyAwarePooling/: README.md  pyproject.toml
Benchmarks/TemporallyAwarePooling/lib/: README.md  captioning.py  main.py  spotting.py  trainer.py  util.py
Benchmarks/TemporallyAwarePooling/logs/: baidu-NetVlad-caption-20230713.tsv
Benchmarks/TemporallyAwarePooling/scripts/: commentary-spotting-train-baseline-001.sh  (+13 more)
Evaluation/: DenseVideoCaptioning.py  EvaluateDenseVideoCaption.py
Evaluation/scripts/: sn-caption-2024-baseline-eval-pretrained-test.sh
annotation_tool/: annotation_guideline.md  annotation_template.xlsx
docs/: annotation_guideline.md
scripts/: caption_download.py
sn-script/: README.md
tpa/: .gitignore  README.md  pyproject.toml
tpa/scripts/: commentary-spotting-2024-eval-fixed-interval-classA6-classB38.sh  commentary-spotting-train-baseline-003.sh  sn-caption-2024-baseline-002.sh  sn-caption-2024-baseline-eval-pretrained-cap.sh  sn-caption-2024-baseline-eval-pretrained-challenge.sh  sn-caption-2024-train-baseline-002.sh  sn-caption-2024-train-baseline-004.sh  spotting-2024-eval-fixed-interval-20.sh  spotting-2024-eval-fixed-interval-5.sh  spotting-2024-eval-fixed-interval-59.sh  spotting-2024-eval-fixed-interval-86.sh  spotting-2024-train-baseline-001.sh  spotting-2024-train-baseline-002.sh  spotting-2024-train-baseline-006.sh  spotting-2024-train-baseline-007.sh  spotting-2024-train-baseline-pretrained-eval.sh
tpa/src/: alpro_dataloader.py  captioning.py  loss.py
(+17 files in other folders)
